Continued Work on GUI

--- a/JSONEditor/ChromaJSONEditor/ChromaJSONEditor/MainWindow.xaml
+++ b/JSONEditor/ChromaJSONEditor/ChromaJSONEditor/MainWindow.xaml
@@ -9,7 +9,8 @@
         Title="CHROMA Card Editor" 
         WindowStartupLocation="CenterScreen" WindowStyle="SingleBorderWindow"
         Icon = "Graphics/icon.png"
-        Width="1620" Height="920">
+        Width="1620" Height="920"
+        Closing="Window_Closing">
     <Grid>
         <Image HorizontalAlignment="Center" VerticalAlignment="Center" Stretch="UniformToFill" Source="Graphics/background.png"/>
         <UserControl Loaded="UserControl_Loaded"/>
@@ -40,9 +41,9 @@
                 <Button Content="Save All" Width="200" Margin="5" Click="Save_All_Click"/>
                 <Button Content="Load" Width="200" Margin="5" Click="Load_Click"/>
                 <Button Content="New Card" Width="200" Margin="5" Click="New_Card_Click"/>
-                <Button Content="Delete Current Card" Width="200" Margin="5" Click="Delete_Current_Card_Click"/>
+                <Button Content="Delete Current Card" Width="200" Margin="5" Click="Delete_Current_Card_Click" IsEnabled="False"/>
             </WrapPanel>
-            <TextBox x:Name="JSONEditorEditorBox" TextWrapping="Wrap" Width="1268" Height="758" HorizontalAlignment="Right" VerticalAlignment="Top" Background="#181818" Foreground="White" Text="Loading..." HorizontalScrollBarVisibility="Auto" AcceptsReturn="True" Margin="0,85,20,0"/>
+            <TextBox x:Name="JSONEditorEditorBox" TextWrapping="Wrap" Width="1268" Height="758" HorizontalAlignment="Right" VerticalAlignment="Top" Background="#181818" Foreground="White" Text="Loading..." HorizontalScrollBarVisibility="Auto" AcceptsReturn="True" Margin="0,85,20,0" AcceptsTab="True" PreviewTextInput="JSONEditorEditorBox_TextChanged"/>
             <ToggleButton x:Name="ShowAttributeToggleButton" Width="200" Content="Show All Attributes" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="332,0,0,6" Checked="ShowAllAttributes_Checked" Unchecked="ShowAllAttributes_Unchecked"/>
             <Button Content="Generate Deck Atlas from .txt File (Requires Python + Active Internet Connection)" HorizontalAlignment="Left" VerticalAlignment="Bottom" Width="500" Margin="696,0,0,6" Click="GenerateDeck_Click"/>
             <Label x:Name="VersionLabel" Content="CHROMA Card Editor Version X.Y.Z | INTERNAL USE ONLY | ©Daggerbunny Studios" HorizontalAlignment="Right" VerticalAlignment="Bottom" FontStyle="Italic" FontSize="10" Margin="2" Foreground="White"/>
