--- a/JSONEditor/ChromaJSONEditor/ChromaJSONEditor/MainWindow.xaml
+++ b/JSONEditor/ChromaJSONEditor/ChromaJSONEditor/MainWindow.xaml
@@ -41,7 +41,7 @@
                 <Button Content="Save All" Width="200" Margin="5" Click="Save_All_Click"/>
                 <Button Content="Load" Width="200" Margin="5" Click="Load_Click"/>
                 <Button Content="New Card" Width="200" Margin="5" Click="New_Card_Click"/>
-                <Button Content="Delete Current Card" Width="200" Margin="5" Click="Delete_Current_Card_Click" IsEnabled="False"/>
+                <Button Content="Delete Current Card" Width="200" Margin="5" Click="Delete_Current_Card_Click"/>
             </WrapPanel>
             <TextBox x:Name="JSONEditorEditorBox" TextWrapping="Wrap" Width="1268" Height="758" HorizontalAlignment="Right" VerticalAlignment="Top" Background="#181818" Foreground="White" Text="Loading..." HorizontalScrollBarVisibility="Auto" AcceptsReturn="True" Margin="0,85,20,0" AcceptsTab="True" PreviewTextInput="JSONEditorEditorBox_TextChanged"/>
             <ToggleButton x:Name="ShowAttributeToggleButton" Width="200" Content="Show All Attributes" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="332,0,0,6" Checked="ShowAllAttributes_Checked" Unchecked="ShowAllAttributes_Unchecked"/>
